# bonsai-management

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  データ項目定義調査結果.md
.github/workflows/: ci.yml
apps/accounts/: admin.py  apps.py  models.py
apps/articles/: admin.py  apps.py  models.py  urls.py  views.py
apps/bonsai/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/common/: forms.py  utils.py
apps/logs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/schedules/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
config/: asgi.py  urls.py
config/settings/: base.py  dev.py  prod.py
docs/: UIサンプル.md  index.html  ui-mockup-grove.html  ui-mockup.html  アーキテクチャ図.md  サイトマップ.md  データ項目定義書.md  データ項目追加検討_Stitch反映.md  モバイルUIモック依頼プロンプト.md  モバイルUI補完プロンプト.md  ユーザーペルソナ.md  レビュー対応案.md  レビュー改善提案.md  技術要件書.md  開発前検討事項.md
docs/preview/: article_bonsai-watering-basics.html  article_pest-control.html  article_repotting-guide.html  articles.html  bonsai_1.html  bonsai_1286272c070f.html  bonsai_2.html  bonsai_3.html  bonsai_676679fb8728.html  bonsai_e6428099f710.html  bonsai_form.html  home.html  index.html  log_1.html  log_2.html  log_3.html  log_4.html  log_44c1d44ef9d9.html  log_8f99566db93c.html  log_b64d2425af06.html  log_ba2392a799ce.html  log_form.html  login.html  logs.html  schedule_form.html  schedules.html  signup.html  species_goyomatsu.html  species_himeringo.html  species_kaede.html  species_keyaki.html  species_kuromatsu.html  species_sakura.html  species_shinpaku.html  species_ume.html
static/css/: app.css
stitch_20260402/5_1/: code.html
stitch_20260402/5_2/: code.html
stitch_20260402/5_3/: code.html
stitch_20260402/5_4/: code.html
stitch_20260402/5_5/: code.html
stitch_20260402/_1/: code.html
stitch_20260402/_10/: code.html
stitch_20260402/_11/: code.html
stitch_20260402/_12/: code.html
stitch_20260402/_2/: code.html
stitch_20260402/_3/: code.html
stitch_20260402/_4/: code.html
stitch_20260402/_5/: code.html
stitch_20260402/_6/: code.html
stitch_20260402/_7/: code.html
stitch_20260402/_8/: code.html
stitch_20260402/_9/: code.html
stitch_20260402/evergreen_moss/: DESIGN.md
templates/: base.html  home.html
templates/_partials/: bottom_nav.html  header.html  messages.html
templates/account/: login.html  logout.html  (+1 more)
tools/: export_static_preview.py
(+33 files in other folders)
